--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -20,12 +20,12 @@
   <script defer src="/js/header.js"></script>
 
   <!-- Style -->
-  <link rel="stylesheet" href="/css/home.css">
+  <link rel="stylesheet" href="/css/<%= cssFile %>">
 </head>
 
 <body>
   <header>
-    <a href="#">
+    <a href="/">
       <img src="/images/logo.svg" alt="logo oCoffee">
       oCoffee
     </a>
@@ -36,9 +36,9 @@
       </button>
 
       <ul>
-        <li><a href="#">Accueil</a></li>
-        <li><a href="#">Catalogue</a></li>
-        <li><a href="#">Boutique</a></li>
+        <li><a href="/">Accueil</a></li>
+        <li><a href="/coffees">Catalogue</a></li>
+        <li><a href="/shop">Boutique</a></li>
       </ul>
     </nav>
   </header>
