add view for shop owners' description

--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -2,8 +2,8 @@
 <main>
   <section id="about">
     <div>
-        <h1>Votre spécialiste Haucloquois du café</h1>
-        <p>oCoffee est un détaillant de café et de produits associés à la consommation du café basé dans la ville de Hauts-de-Cloques. Nous importons nos produits directement des producteurs, et nous les sélectionnons selon des critères exigeants de qualité. oCoffee est reconnu à l’échelle départementale.</p>
+        <h1>Votre spécialiste Haucloquois du <strong>café</strong></h1>
+        <p>oCoffee est un détaillant de <strong>café</strong> et de produits associés à la consommation du <strong>café</strong> basé dans la ville de Hauts-de-Cloques. Nous importons nos produits directement des producteurs, et nous les sélectionnons selon des critères exigeants de qualité. oCoffee est reconnu à l’échelle départementale.</p>
         <a class="button" href="/coffees">Découvrir notre catalogue</a>
     </div>
     <img src="../images/about.jpg" alt="Selection de nos meilleurs cafés oCoffee">
