--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -38,7 +38,7 @@
       <ul>
         <li><a href="/">Accueil</a></li>
         <li><a href="/coffees">Catalogue</a></li>
-        <li><a href="/shop">Boutique</a></li>
+        <li><a href="/shop">Qui sommes-nous?</a></li>
       </ul>
     </nav>
   </header>
