fix see-all-coffees-button with js' module

--- a/app/views/catalog.ejs
+++ b/app/views/catalog.ejs
@@ -24,5 +24,6 @@
       Voir tous les produits
     </button>
   </section>
+  <script src="/js/displayAllCoffee.js"></script>
 </main>
 <%- include('partials/footer.ejs') %>
