--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -15,9 +15,15 @@
   <link rel="stylesheet" href="/css/base.css">
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/layout.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+  crossorigin="">
 
   <!-- Common scripts -->
   <script defer src="/js/header.js"></script>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+  integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+  crossorigin=""></script>
 
   <!-- Style -->
   <link rel="stylesheet" href="/css/<%= cssFile %>">
