modify PK of coffee table with an ID SERIAL different from reference for future addCoffeePage

--- a/app/views/catalog.ejs
+++ b/app/views/catalog.ejs
@@ -14,7 +14,7 @@
           <h2><%= coffee.name %></h2>
           <p>Origine <%= coffee.country_name %></p>
           <p><%= coffee.price %> €/kg</p>
-          <a class="button-outline" href="/coffees/<%= coffee.reference %>">Voir le détail</a>
+          <a class="button-outline" href="/coffees/<%= coffee.coffee_id %>">Voir le détail</a>
         </div>
       </article>
       <% } %>
