--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -18,7 +18,7 @@
           <img src="../images/coffees/<%= coffee.reference %>.png" alt="<%= coffee.name %>">
           <div>
             <h3><%= coffee.name %></h3>
-            <a class="button-outline" href="/coffees/<%= coffee.reference %>">Voir le détail</a>
+            <a class="button-outline" href="/coffees/<%= coffee.coffee_id %>">Voir le détail</a>
           </div>
         </article>
       </li>
