replace all simple quotes by double quotes

--- a/app/views/catalog.ejs
+++ b/app/views/catalog.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header.ejs') %>
+<%- include("partials/header.ejs") %>
 <main>
   <section id="catalog">
     <h1>Notre catalogue</h1>
@@ -26,4 +26,4 @@
   </section>
   <script src="/js/displayAllCoffee.js"></script>
 </main>
-<%- include('partials/footer.ejs') %>
+<%- include("partials/footer.ejs") %>
