--- a/app/views/shop.ejs
+++ b/app/views/shop.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header.ejs') %>
+<%- include("partials/header.ejs") %>
 <main>
   <section id="about">
     <div>
@@ -41,4 +41,4 @@
   </section>
 </main>
 <script src="/js/displayMap.js"></script>
-<%- include('partials/footer.ejs') %>
+<%- include("partials/footer.ejs") %>
