--- a/app/views/coffee.ejs
+++ b/app/views/coffee.ejs
@@ -1,4 +1,4 @@
-<%- include ('partials/header.ejs') %>
+<%- include ("partials/header.ejs") %>
 <main>
    <section id="coffee">
        <article>
@@ -26,4 +26,4 @@
           </article>
    </section>
 </main>
-<%- include ('partials/footer.ejs') %>
+<%- include ("partials/footer.ejs") %>
