--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header.ejs') %>
+<%- include("partials/header.ejs") %>
 <main>
   <section id="about">
     <div>
@@ -26,4 +26,4 @@
     </ul>
   </section>
 </main>
-<%- include('partials/footer.ejs') %>
+<%- include("partials/footer.ejs") %>
