review shop-view's style

--- a/app/views/shop.ejs
+++ b/app/views/shop.ejs
@@ -39,6 +39,7 @@
         </section>
     </div>
   </section>
+  <a class="button" href="/">Retour à l'accueil</a>
 </main>
 <script src="/js/displayMap.js"></script>
 <%- include("partials/footer.ejs") %>
