create view for contact page, post route create too, TODO middleware

--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -45,6 +45,7 @@
         <li><a href="/">Accueil</a></li>
         <li><a href="/coffees">Catalogue</a></li>
         <li><a href="/shop">Qui sommes-nous?</a></li>
+        <li><a href="/contact">Contact</a></li>
       </ul>
     </nav>
   </header>
