--- a/app/views/contact.ejs
+++ b/app/views/contact.ejs
@@ -2,6 +2,9 @@
 <div>
     <h1>Contact</h1>
     <p>Pour toute question, n'hésitez pas à nous contacter.</p>
+    <% if (message) { %>
+        <p class="message"><%= message %></p>
+    <% } %>
 </div>
 
 <main>
