--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -42,19 +42,16 @@
       </button>
 
       <ul>
-        <% if (typeof session !== 'undefined' && session && session.isAdmin) { %>
-          <li><span>Bonjour <%= session.username || '' %></span></li>
+        <% if (session.isAdmin) { %>
+          <li>Bonjour <%= session.username %></li>
           <li><a href="/admin">Admin</a></li>
           <li><a href="/admin/logout">Se déconnecter</a></li>
-          <% } else { %>
-          <li><a href="/admin/login">Connexion</a></li>
-          <% } %>
-          <!-- <li style="opacity:.5">Debug: <%= JSON.stringify(session) %></li> -->
-          
+        <% } %>
         <li><a href="/">Accueil</a></li>
         <li><a href="/coffees">Catalogue</a></li>
         <li><a href="/shop">Qui sommes-nous?</a></li>
         <li><a href="/contact">Contact</a></li>
+        <li><a href="/admin/login">Connexion</a></li>
       </ul>
     </nav>
   </header>
