--- a/app/views/admin.ejs
+++ b/app/views/admin.ejs
@@ -4,13 +4,16 @@
 <% if (okMessage) { %>
     <p class="okMessage"><%= okMessage %></p>
 <% } %>
-
+<% if (errorMessage) { %>
+    <p class="errorMessage"><%= errorMessage %></p>
+<% } %>
 <nav class="admin-nav">
     <ul>
         <li><a class="button" href="/admin/createCoffee">Créer un café</a></li>
         <li><a class="button" href="/admin/editCoffee">Modifier un café</a></li>
         <li><a class="button" href="/admin/createTaste">Créer un type de café</a></li>
         <li><a class="button" href="/admin/logout">Se déconnecter</a></li>
+        <li><a class="button" href="/admin/manageUsers">Gérer les utilisateurs</a></li>
     </ul>
 </nav>
 
