create views for add users

--- a/app/views/manageUsers.ejs
+++ b/app/views/manageUsers.ejs
@@ -1,6 +1,9 @@
 <%- include("partials/header.ejs") %>
 <main>
     <h1>Gestion des utilisateurs</h1>
+    <% if (okMessage) { %>
+        <div class="okMessage"><%= okMessage %></div>
+    <% } %>
     <table>
         <thead>
             <tr>
@@ -23,7 +26,11 @@
             <% }) %>
         </tbody>
     </table>
-    <a class="button" href="/admin">Retour à l'administration</a>
-    <a href="/admin/createUser" class="button">Créer un utilisateur</a>"></a>
+    <nav class="admin-nav">
+        <ul>
+            <li><a class="button" href="/admin">Retour à l'administration</a></li>
+            <li><a class="button" href="/admin/createUser" >Créer un utilisateur</a></li>
+        </ul>
+    </nav>
 </main>
 <%- include("partials/footer.ejs") %>
