create view for edit users

--- a/app/views/createUser.ejs
+++ b/app/views/createUser.ejs
@@ -14,10 +14,10 @@
             <input type="password" id="password" name="password" required>
         </div>
         <div>
-            <label for="is_admin">Admin :</label>
+            <label for="is_admin">Rôle :</label>
             <select id="is_admin" name="is_admin">
-                <option value="true">Oui</option>
-                <option value="false">Non</option>
+                <option value="true">Administrateur</option>
+                <option value="false">Utilisateur</option>
             </select>
         </div>
         <button class="button" type="submit">Créer</button>
