--- a/app/views/editCoffee.ejs
+++ b/app/views/editCoffee.ejs
@@ -13,11 +13,11 @@
         </div>
         <div>
             <label for="price">Prix :</label>
-            <input type="number" id="price" name="price" value="<%= coffee.price %>" required>
+            <input type="number" id="price" name="price" step="0.01" value="<%= coffee.price %>" required>
         </div>
         <div>
-            <label for="country_name">Pays d'origine :</label>
-            <input type="text" id="country_name" name="country_name" value="<%= coffee.country_name %>" required>
+            <label for="country">Pays d'origine :</label>
+            <input type="text" id="country" name="country" value="<%= coffee.country_name %>" required>
         </div>
         <div>
             <label for="description">Description :</label>
