--- a/app/views/catalog.ejs
+++ b/app/views/catalog.ejs
@@ -27,6 +27,7 @@
       Voir tous les produits
     </button>
   </section>
+  <div><a class="button" href="/">Retour à l'accueil</a></div>
   <script src="/js/displayAllCoffee.js"></script>
 </main>
 <%- include("partials/footer.ejs") %>
