--- a/app/views/editUser.ejs
+++ b/app/views/editUser.ejs
@@ -1,10 +1,12 @@
 <%- include("partials/header.ejs") %>
 <main>
-    <% if (errorMessage) { %>
-        <div class="error"><%= errorMessage %></div>
-    <% } %>
-    <h1>Modifier l'utilisateur <%= user.username %></h1>
-    <form action="" method="POST" class="editUser__form">
+    <div>
+        <h1>Modifier l'utilisateur <%= user.username %></h1>
+        <% if (errorMessage) { %>
+            <p class="error"><%= errorMessage %></p>
+        <% } %>
+    </div>
+    <form action="" method="POST">
         <div>
             <label for="username">Nom d'utilisateur :</label>
             <input type="text" id="username" name="username" value="<%= user.username %>" required>
@@ -22,5 +24,6 @@
         </div>
         <button class="button" type="submit">Modifier</button>
     </form>
+    <li><a class="button" href="/admin">Retour à l'administration</a></li>
 </main>
 <%- include("partials/footer.ejs") %>
