--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,3 +1,11 @@
+.admin-main {
+display: flex;
+flex-direction: column;
+align-items: center;
+width: 100%;
+gap: 2rem;
+}
+
 .admin-nav ul {
     display: flex;
     flex-direction: column;
