--- a/app/views/editUser.ejs
+++ b/app/views/editUser.ejs
@@ -24,6 +24,6 @@
         </div>
         <button class="button" type="submit">Modifier</button>
     </form>
-    <li><a class="button" href="/admin">Retour à l'administration</a></li>
+    <a class="button" href="/admin">Retour à l'administration</a>
 </main>
 <%- include("partials/footer.ejs") %>
