--- a/app/views/manageUsers.ejs
+++ b/app/views/manageUsers.ejs
@@ -9,7 +9,6 @@
     <table>
         <thead>
             <tr>
-                <th>ID</th>
                 <th>Nom d'utilisateur</th>
                 <th>Admin</th>
                 <th>Actions</th>
@@ -18,11 +17,11 @@
         <tbody>
             <% users.forEach(user => { %>
                 <tr>
-                    <td><%= user.id %></td>
                     <td><%= user.username %></td>
                     <td><%= user.is_admin ? "Oui" : "Non" %></td>
-                    <td>
+                    <td class="actions">
                         <a href="/admin/editUser/<%= user.id %>" class="button">Modifier</a>
+                        <a href="/admin/deleteUser/<%= user.id %>" class="button">Supprimer</a>
                     </td>
                 </tr>
             <% }) %>
