--- a/app/views/editCoffee.ejs
+++ b/app/views/editCoffee.ejs
@@ -34,6 +34,6 @@
         </fieldset>
         <button class="button" type="submit">Modifier</button>
     </form>
-    <li><a class="button" href="/admin">Retour à l'administration</a></li>
+    <a class="button" href="/admin">Retour à l'administration</a>
 </main>
 <%- include ("partials/footer.ejs") %>
