--- a/app/views/coffees.ejs
+++ b/app/views/coffees.ejs
@@ -1,14 +1,44 @@
 <%- include("partials/header.ejs") %>
 <main>
   <section id="catalog">
-    <h1>Notre catalogue</h1>
-    <% if (okMessage) { %>
-        <p class="okMessage"><%= okMessage %></p>
-    <% } %>
-    <% if (errorMessage) { %>
-        <p class="errorMessage"><%= errorMessage %></p>
-    <% } %>
-
+    <div>
+      <h1>Notre catalogue</h1>
+      <% if (okMessage) { %>
+          <p class="okMessage"><%= okMessage %></p>
+      <% } %>
+      <% if (errorMessage) { %>
+          <p class="errorMessage"><%= errorMessage %></p>
+      <% } %>
+    </div>
+    <form action="/coffees" method="GET" id="filter-form">
+      <legend>Filtrer les cafés</legend>
+      <div>
+        <label for="country">Pays</label>
+        <select name="country">
+          <option value="">---</option>
+          <% for (const country of countries) { %>
+            <option value="<%= country.name %>"><%= country.name %></option>
+          <% } %>
+        </select>
+      </div>
+      <div>
+        <label for="type">Type de café</label>
+        <select name="type">
+          <option value="">---</option>
+          <% for (const type of coffeeTypes) { %>
+            <option value="<%= type.type %>"><%= type.type %></option>
+          <% } %>
+        </select>
+      </div>
+      <div>
+        <label for="name">Nom du café</label>
+        <input type="text" name="name" placeholder="Nom du café" />
+      </div>
+      <div class="button-container">
+        <button class="button" type="submit">Filtrer</button>
+        <a class="button" href="/coffees">Réinitialiser</a>
+      </div>
+    </form>
     <div class="articles only-display-4-articles" id="articles-list">
       <% for (const coffee of coffees) { %>
       <article>
@@ -32,5 +62,7 @@
   </section>
   <div><a class="button" href="/">Retour à l'accueil</a></div>
   <script src="/js/displayAllCoffee.js"></script>
+  <script src="/js/autoFilter.js"></script>
+
 </main>
 <%- include("partials/footer.ejs") %>
