change form style for mobile

--- a/app/views/editUser.ejs
+++ b/app/views/editUser.ejs
@@ -23,6 +23,7 @@
             </select>
         </div>
         <button class="button" type="submit">Modifier</button>
-    <a class="button" href="/admin">Retour à l'administration</a>
+    </form>
+    <a class="button" href="/admin/manageUsers">Retour à la gestion des utilisateurs</a>
 </main>
 <%- include("partials/footer.ejs") %>
