--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -58,6 +58,17 @@
   gap: 1rem;
 }
 
+@media screen and (max-width: 720px) {
+  #filter-form {
+    flex-direction: column;
+    align-items: stretch;
+  }
+  .button-container {
+    flex-direction: column;
+    align-items: stretch;
+  }
+}
+
 #filter-form input,
 #filter-form select {
   padding: 0.5rem;
@@ -74,8 +85,8 @@
   border-color: var(--color-cream);
   outline: none;
 }
-
-#filter-form label {
+ 
+#filter-form legend {
   font-weight: bold;
 }
 
