create views for manage coffee in back-office, TODO refactoring normalize forms inputs

--- a/app/views/manageUsers.ejs
+++ b/app/views/manageUsers.ejs
@@ -3,10 +3,10 @@
     <div>
         <h1>Gestion des utilisateurs</h1>
         <% if (okMessage) { %>
-            <div class="okMessage"><%= okMessage %></div>
+            <p class="okMessage"><%= okMessage %></p>
         <% } %>
         <% if (errorMessage) { %>
-            <div class="errorMessage"><%= errorMessage %></div>
+            <p class="errorMessage"><%= errorMessage %></p>
         <% } %>
     </div>
     <table>
