--- a/app/views/admin.ejs
+++ b/app/views/admin.ejs
@@ -11,9 +11,9 @@
     </div>
     <nav class="admin-nav">
         <ul>
-            <li><a class="button" href="/admin/createCoffee">Créer un café</a></li>
-            <li><a class="button" href="/admin/createTaste">Créer un type de café</a></li>
+            <li><a class="button" href="/admin/manageCoffees">Gérer les cafés</a></li>
             <li><a class="button" href="/admin/manageUsers">Gérer les utilisateurs</a></li>
+            <li><a class="button" href="/admin/createTaste">Créer un type de café</a></li>
             <li><a class="button" href="/admin/logout">Se déconnecter</a></li>
         </ul>
     </nav>
